# ltws-parser

./: README.md  USAGE.md  llms.txt  pyproject.toml
examples/: v3_min_source.ltws
examples/v3_min_source/: config.toml  source.toml
examples/v3_min_source/apis/: daily.toml
examples/v3_min_source/categories/: custom_categories.toml
scripts/: ltws-cli.py  ltws-gui.py
src/ltws/: __init__.py  cli.py  exceptions.py  gui.py  models.py  packager.py  parser.py  utils.py  validator.py  variables.py
