[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltws-parser"
version = "1.4.0"
description = "LTWS 协议解析器"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Little Tree Studio", email = "studio@zsxiaoshu.cn"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "rtoml>=0.11.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "pydantic>=2.10.6",
    "click>=8.1.8",
]

[project.optional-dependencies]
cli = ["click>=8.0.0", "rich>=13.0.0"]

[project.urls]
Homepage = "https://github.com/shu-shu-1/ltws-parser"
Repository = "https://github.com/shu-shu-1/ltws-parser"
"Bug Tracker" = "https://github.com/shu-shu-1/ltws-parser/issues"

[project.scripts]
ltws = "ltws.cli:main"
